--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
             "dest": "/server.js"
         },
         {
+            "src": "/",
+            "dest": "/index.html"
+        },
+        {
             "src": "/(.*)",
             "dest": "/$1",
             "headers": {
