--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,35 @@
 {
-    "version": 2,
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/",
-            "dest": "/index.html"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/$1",
-            "headers": {
-                "Cache-Control": "no-cache"
-            }
-        }
-    ],
-    "functions": {
-        "server.js": {
-            "memory": 128,
-            "maxDuration": 10
-        }
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "*.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.png",
+      "use": "@vercel/static"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(reserve|create-reservation|orders|update|cancel|admin/reservations)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/(.*\\.html)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.png)",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
