--- a/package.json
+++ b/package.json
@@ -1,19 +1,11 @@
 {
-    "name": "solo-leveling-task-manager",
-    "version": "1.0.0",
-    "description": "Task management system with Solo Leveling theme",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "pg": "^8.11.3",
-        "bcrypt": "^5.1.1",
-        "jsonwebtoken": "^9.0.2",
-        "cors": "^2.8.5"
-    },
-    "engines": {
-        "node": ">=14.0.0"
-    }
+  "name": "solo-leveling",
+  "version": "1.0.0",
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5"
+  }
 }
