--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "solo-leveling",
+  "name": "your-project-name",
   "version": "1.0.0",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5", // <-- تأكد من وجود هذا السطر (قد يختلف الرقم)
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5"
+    "pg": "^8.11.5"
+    // ... other dependencies
   }
+  // ... rest of package.json
 }
