--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "your-project-name",
+  "name": "solo-leveling",
   "version": "1.0.0",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5", // <-- تأكد من وجود هذا السطر (قد يختلف الرقم)
+    "dotenv": "^16.4.5", 
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5"
-    // ... other dependencies
+   
   }
-  // ... rest of package.json
+  
 }
