--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "solo-leveling",
-  "version": "1.0.0",
+  "name": "solo-leveling-backend", // اسم المشروع (يمكنك تغييره)
+  "version": "1.0.0", // إصدار المشروع
+  "description": "الخادم الخلفي لتطبيق مهام Solo Leveling", // وصف قصير للمشروع
+  "main": "server.js", // الملف الرئيسي الذي يتم تشغيله عند بدء التشغيل
+  "scripts": {
+    "start": "node server.js", // الأمر لتشغيل التطبيق في وضع الإنتاج
+    "dev": "nodemon server.js", // الأمر لتشغيل التطبيق في وضع التطوير (يتطلب nodemon)
+    "test": "echo \"Error: no test specified\" && exit 1" // أمر وهمي للاختبارات (يمكن تعديله لاحقًا)
+  },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5", 
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.5"
-   
-  }
-  
+    "bcryptjs": "^2.4.3", // لتجزئة كلمات المرور
+    "cors": "^2.8.5", // لتمكين CORS (Cross-Origin Resource Sharing)
+    "dotenv": "^16.4.5", // لتحميل متغيرات البيئة من ملف .env (مفيد للتطوير المحلي)
+    "express": "^4.19.2", // إطار عمل الويب
+    "jsonwebtoken": "^9.0.2", // لإنشاء والتحقق من JWT (JSON Web Tokens)
+    "pg": "^8.11.5" // مشغل قاعدة بيانات PostgreSQL (للاتصال بـ Neon)
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0" // أداة لإعادة تشغيل الخادم تلقائيًا عند تغيير الملفات (للتطوير)
+  },
+  "engines": {
+    "node": ">=18.0.0" // تحديد إصدار Node.js الموصى به أو المطلوب (مهم للنشر)
+  },
+  "author": "", // اسم المطور أو الفريق (اختياري)
+  "license": "ISC" // نوع الرخصة (ISC هو الافتراضي الشائع)
 }
