--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
-  "name": "solo-leveling-backend", 
+  "name": "solo-leveling-server",
   "version": "1.0.0",
-  "main": "server.js", 
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js", 
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3", 
-    "cors": "^2.8.5", 
-    "dotenv": "^16.4.5", 
-    "express": "^4.19.2", 
-    "jsonwebtoken": "^9.0.2", 
-    "pg": "^8.11.5" 
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0" 
-  },
-  "engines": {
-    "node": ">=18.0.0" 
-  },
-  "author": "", 
-  "license": "ISC" 
+    "@neondatabase/serverless": "^1.0.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
+  }
 }
