--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "server.js", "use": "@vercel/node" }
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/server.js" },
-    { "src": "/(.*)", "dest": "/$1" }
-  ],
-  "env": { "NODE_ENV": "production" }
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    }
+  ]
 }
